# SimpleLogger

./: .gitignore  CMakeLists.txt  Logger.sln
Logger/: Data_types.hpp  Logger.cpp  Logger.h  Logger.vcxproj  Logger.vcxproj.filters  LoggerFormat.hpp  LoggerThread.h  ReadMe.txt  dllmain.cpp  stdafx.cpp  stdafx.h
Logger/Debug/: logger.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc140.idb
Logger/Debug/Logger.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Logger.lastbuildstate  Logger.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Logger/Release/: NativeCodeAnalysis.read.1.tlog  logger.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml
Logger/Release/Logger.tlog/: CL.command.1.tlog  (+6 more)
TestLogger/: ReadMe.txt  TestLogger.cpp  TestLogger.vcxproj  TestLogger.vcxproj.filters  stdafx.cpp  stdafx.h
TestLogger/Debug/: vc140.idb
TestLogger/Dll/: Logger.h  Logger.lib
include/: DllHeader.h  Logger.h  LoggerThread.h  Types.hpp
include/CRTP/: CRTP.hpp
include/Proxy/: Proxy.hpp  ProxyExtend.hpp  ProxyImpl.hpp  ProxyImplInterface.hpp
include/Settings/: Settings.hpp  SettingsImpl.hpp  SettingsOptions.hpp
include/TLS/: SimpleLoggerTLS.hpp  SimpleLoggerTLSImpl.hpp
include/Types/: Message.hpp  Setting.hpp
include/Utils/: Exceptions.hpp  Factory.hpp  FailureFunctions.hpp  Format.hpp  Functions.inl  Operators.inl  SehGuard.hpp
source/: Logger.cpp  dllmain.cpp
source/Proxy/: Proxy.cpp  ProxyImpl.cpp
source/Settings/: Settings.cpp  SettingsImpl.cpp
source/TLS/: SimpleLoggerTLS.cpp  SimpleLoggerTLSImpl.cpp
(+13 files in other folders)
